--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="header"><!начало заголовка, верх страницы содержит: логотип, кнопку "ремонт сайта",номер телефона с вацап и кнопку инстаграмма>
 			<div class="top-menu-left"><!включает в себя верхнюю левую часть страницы>
 				<div class="duco-technic"><!содержит: логотип>
-					<img src="images/vector (1).png">
+					<img src="images/Vec.png">
 				</div>
 				<div class="online-store"><!содержит: кнопку "ремонт сайта">
 						<button class="bt1">		
