--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</div><!assortiment>
 				</div><!information>
 				<div class="panel-left"><!содержит: адрес а так же кнопки "Яндекс и Вацап">
-					<img src="images/subtract.png" class="img-bt">
+					<img src="images/Sub.png" class="img-bt">
 					<p class="adress-text1">
 						Адрес:
 					</p>
